# fairytale

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  Makefile.32  README.md  analyser.cpp  analyser.h  appveyor.yml  array.h  block.cpp  block.h  common.h  compile_commands.json  crc32.h  deduper.cpp  deduper.h  fairytale.cpp  filestream.cpp  filestream.h  hybridstream.cpp  hybridstream.h  image.h  make.bat  parser.h  statemachine.cpp  storagemanager.cpp  storagemanager.h  stream.h  structs.h  transform.h  transformfactory.h
contrib/spdlog/: tweakme.h
contrib/zlib/: crc32.h  deflate.h  gzguts.h  inffixed.h  inflate.h  inftrees.h  trees.h  zconf.h  zlib.h  zutil.h
fileformat/: archive.h  blockinfoentry.h  blocknodeentry.h  blocknodesequence.h  blocksegmentation.h  chunkinfosequence.h  codecdefinition.h  codecentry.h  codecsequenceentry.h  directoryentry.h  directorytree.h  fileentry.h  fileheader.h  metadata.h  tag.h
parsers/: bitmapparser.h  ddsparser.cpp  ddsparser.h  deflateparser.h  jpegparser.h  jsonparser.cpp  jsonparser.h  magic.cpp  magic.h  modparser.cpp  modparser.h  textparser.cpp  textparser.h
test/: testMTFList.cpp  testMain.cpp
transforms/: MTFList.h  mtflist.h  zlibtransform.cpp  zlibtransform.h
